virtualbox (5.0.12-dfsg-3) UNRELEASED; urgency=medium

  * Rework rules file to work also when only guest packages needs to be built.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 08 Jan 2016 16:14:58 +0100

virtualbox (5.0.12-dfsg-2) unstable; urgency=low

  [ Felipe Sateler ]
  * Remove old init script, superceeded by modaliases
    (Closes: #796706)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Mon, 28 Dec 2015 18:22:57 +0100

virtualbox (5.0.12-dfsg-1) unstable; urgency=medium

  * New upstream release, patch refresh.
    - drop fix-gcc-version.patch: upstream.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Sat, 19 Dec 2015 10:29:34 +0100

virtualbox (5.0.10-dfsg-7) unstable; urgency=high

  * use "--no-enable" to not enable the service by default.
    (Closes: #807542). A big thanks to Laurent Bigonville!

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 11 Dec 2015 12:54:05 +0100

virtualbox (5.0.10-dfsg-6) unstable; urgency=medium

  * Do not enable vboxweb.service by default
    (Closes: #807542)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 10 Dec 2015 11:21:32 +0100

virtualbox (5.0.10-dfsg-5) unstable; urgency=medium

  * fix-gcc-version.patch: allow gcc-5.3
    (Closes: #807466)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 09 Dec 2015 09:26:44 +0100

virtualbox (5.0.10-dfsg-4) unstable; urgency=low

  * Add vboxweb.service from Sérgio Basto
    - thanks algernon for the help :)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 24 Nov 2015 11:39:57 +0100

virtualbox (5.0.10-dfsg-3) unstable; urgency=medium

  [ Mattia Rizzolo ]
  * Fix cgit VCS field
  * Stop overriding dh_builddeb, the new dpkg already defaults to xz.

  [ Gianfranco Costamagna ]
  * add x11-xserver-utils to x11 runtime dependencies, needed for xrandr
    (Closes: #805752). A great thanks to Ross Boylan for digging into the
    issue and reporting the fix!