@@ -1,6 +1,9 @@
 virtualbox (5.0.12-dfsg-3) UNRELEASED; urgency=medium
 
   * Rework rules file to work also when only guest packages needs to be built.
+  * Merge VBox.sh script with upstream, and add procps to runtime dependencies
+    thanks Andreas Beckmann <anbe@debian.org>
+    -cfr https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=802143#26
 
  -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 08 Jan 2016 16:14:58 +0100
 
